# future

./: .flake8  .gitignore  Makefile  README.md  example.py  mkdocs.yml  pyproject.toml  run.py  test.py
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
.github/workflows/: ci.yml  insp.md
docs/: index.md  installation.md
future/: __init__.py  application.py  authentication.py  boilerplate.py  cli.py  controllers.py  database.py  docs.py  exceptions.py  faker.py  graphql.py  graphql_old.py  middleware.py  migrations.py  models.py  plugins.py  request.py  response.py  routing.py  scheduler.py  settings.py  testclient.py  types.py  utils.py  websockets.py
tests/: base.graphql  directives.graphql  paging.graphql  root.mutation.graphql  root.query.graphql  test_app_routing.py  test_app_subdomains.py  test_application.py  test_database.py  test_database_clickhouse.py  test_database_elasticsearch.py  test_database_kafka.py  test_database_mongodb.py  test_database_mysql.py  test_database_pgsql.py  test_graphql.py  test_kafka.py  test_routing.py  tests-conftest.py  user.graphql
