[tool.poetry]
name = "future"
version = "0.2.4"
description = "Next Gen. ASGI Framework for minimal Web APIs"
authors = ["Your Name <you@example.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.1"
httpx = "^0.28.0"
uvloop = {version = "^0.21.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'"}
rich = "^13.7.1"
httpie = "^3.2.2"
elasticsearch = "^8.15.1"
dnspython = "^2.7.0"
ariadne = "^0.23.0"
pwntools = "^4.14.0"
msgspec = "^0.19.0"
pytest-asyncio = "^0.25.3"
coverage = "^7.6.10"
faker = "^35.0.0"
python-magic = "^0.4.27"
strawberry-graphql = "^0.262.5"
plotly = "^6.0.1"
networkx = "^3.4.2"
flask = "^3.1.0"
numpy = "^2.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.8.0"
mypy = "^1.9.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
extend-select = ["UP"]

[tool.flake8]
exclude = ["__pycache__", "built", "build", "venv"]
ignore = ["E203", "E266", "W503", "E0213"]  # E0213 = Ignores missing self error
max-line-length = 120
max-complexity = 14
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
